<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.xyoye.user_component.ui.activities.register.RegisterViewModel" />

        <variable
            name="viewModel"
            type="com.xyoye.user_component.ui.activities.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/item_bg_color">

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/layout_toolbar" />

        <TextView
            android:id="@+id/user_register_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tips_user_register"
            android:textColor="@color/text_black"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_account_layout"
            style="@style/InputEditLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/tips_input_account"
            app:layout_constraintTop_toBottomOf="@+id/user_register_tips">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/user_account_et"
                style="@style/InputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxEms="20"
                android:text="@={viewModel.accountField}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_password_layout"
            style="@style/InputEditLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tips_input_password"
            app:layout_constraintTop_toBottomOf="@+id/user_account_layout"
            app:passwordToggleDrawable="@drawable/ic_input_visible"
            app:passwordToggleEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/user_password_et"
                style="@style/InputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:maxEms="20"
                android:text="@={viewModel.passwordField}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_email_layout"
            style="@style/InputEditLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tips_input_email"
            app:layout_constraintTop_toBottomOf="@+id/user_password_layout">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/user_email_et"
                style="@style/InputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxEms="50"
                android:text="@={viewModel.emailField}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_screen_name_layout"
            style="@style/InputEditLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tips_input_screen_name"
            app:layout_constraintTop_toBottomOf="@+id/user_email_layout">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/user_screen_name_et"
                style="@style/InputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxEms="50"
                android:text="@={viewModel.screenNameField}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/background_login_button"
            android:onClick="@{()-> viewModel.register()}"
            android:text="@string/action_register"
            android:textColor="@color/text_white_immutable"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/user_screen_name_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
